--- a/index2.html
+++ b/index2.html
@@ -84,55 +84,55 @@
               <li><hr class="dropdown-divider" /></li>
               <li><a class="dropdown-item" href="index4.html">Visi dan Misi</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Profil Kelompok Empat</a></li>
+              <li><a class="dropdown-item" href="index5.html">Profil Kelompok Empat</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Program Sekolah</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Program Kerja</a></li>
+              <li><a class="dropdown-item" href="index6.html">Program Kerja</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Hubungan Industri</a></li>
+              <li><a class="dropdown-item" href="index7.html">Hubungan Industri</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Teaching Factory dan Program Inovasi</a></li>
+              <li><a class="dropdown-item" href="index8.html">Teaching Factory dan Program Inovasi</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Program Pengembangan Sekolah</a></li>
+              <li><a class="dropdown-item" href="index9.html">Program Pengembangan Sekolah</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Program Keahlian</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">TEKNIK ELEKTRONIKA INDUSTRI</a></li>
+              <li><a class="dropdown-item" href="index10.html">TEKNIK ELEKTRONIKA INDUSTRI</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">TEKNIK OTOMASI INDUSTRI</a></li>
+              <li><a class="dropdown-item" href="index11.html">TEKNIK OTOMASI INDUSTRI</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">SISTEM INFORMASI JARINGAN DAN APLIKASI</a></li>
+              <li><a class="dropdown-item" href="index21.html">SISTEM INFORMASI JARINGAN DAN APLIKASI</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">REKAYASA PERANGKAT LUNAK</a></li>
+              <li><a class="dropdown-item" href="index13.html">REKAYASA PERANGKAT LUNAK</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Sarana Prasarana</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Sarana Infrastruktur</a></li>
+              <li><a class="dropdown-item" href="index14.html">Sarana Infrastruktur</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Sarana Pembelajaran</a></li>
+              <li><a class="dropdown-item" href="index15.html">Sarana Pembelajaran</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Kegiatan Sekolah</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Ekstrakulikuler</a></li>
+              <li><a class="dropdown-item" href="index16.html">Ekstrakulikuler</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Laporan Kegiatan Sekolah</a></li>
+              <li><a class="dropdown-item" href="index17.html">Laporan Kegiatan Sekolah</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Galeri</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Foto</a></li>
+              <li><a class="dropdown-item" href="index18.html">Foto</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Video</a></li>
+              <li><a class="dropdown-item" href="index19.html">Video</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -150,47 +150,6 @@
       </div>
     </section>
     <!--Akhir Marquee-->
-
-    <!--Slide-->
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="image/depan1.jpg" class="d-block w-100" alt="depan1" />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>SMK Negeri 1 Nilasari</h5>
-            <p>Some representative placeholder content for the first slide.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="image/depan2.jpg" class="d-block w-100" alt="depan2" />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="image/depan2.jpg" class="d-block w-100" alt="depan3" />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-    <!--Akhir Slide-->
 
     <!--Top footer-->
     <section id="top-footer">
