update informasi sekolah
- update index2.html
-Rename file index21.html menjadi index3.html. copas kerangka html dari file index21.html

--- a/index3.html
+++ b/index3.html
@@ -151,6 +151,8 @@
     </section>
     <!--Akhir Marquee-->
 
+    <h1>index3</h1>
+
     <!--Top footer-->
     <section id="top-footer">
       <div class="container">
