--- a/index2.html
+++ b/index2.html
@@ -143,13 +143,14 @@
     </nav>
     <!--Akhir Navbar-->
 
-    <!--Marquee-->
-    <section class="Marquee bg-warning">
-      <div class="container" id="marquee">
-        <marquee behavior="left" direction="" onmouseover="this.stop()" onmouseout="this.start()">Selamat Datang di Web SMK Negeri 1 Nilasari</marquee>
-      </div>
-    </section>
-    <!--Akhir Marquee-->
+    <!--breadcrumb-->
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Sejarah Singkat</li>
+      </ol>
+    </nav>
+    <!--Akhir breadcrumb-->
 
     <!--Top footer-->
     <section id="top-footer">
