--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <!--Akhir Navbar-->
 
     <!--Marquee-->
-    <section class="Marquee bg-warning">
+    <section class="Marquee bg-primary">
       <div class="container" id="marquee">
         <marquee behavior="left" direction="" onmouseover="this.stop()" onmouseout="this.start()">Selamat Datang di Web SMK Negeri 1 Nilasari</marquee>
       </div>
