--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
 
     <!--Head-->
     <header>
-      <div class="container">
+      <div class="container overflow-auto">
         <div class="row">
-          <div class="col-md-1">
+          <div class="col-sm-1">
             <img src="image/logo.png" class="rounded mx-auto" alt="logo" />
           </div>
-          <div class="col-md-7">
+          <div class="col-sm-7">
             <h1>SMK Negeri 1 Nilasari</h1>
             <p>SMK UNGGULAN YANG MENGHASILKAN SDM BERMUTU DAN BERDAYA SAING TINGGI</p>
           </div>
-          <div class="col-md-4">
-            <form class="d-flex">
+          <div class="col-sm-4">
+            <form class="d-flex pt-4">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
               <button class="btn btn-outline-success" type="submit" id="search">Search</button>
             </form>
@@ -79,8 +79,8 @@
     <!--Navbar-->
     <nav class="navbar">
       <div class="container-sm justify-content-center">
-        <ul class="nav nav-pills" id="nav-pills">
-          <li class="nav-item">
+        <ul class="nav" id="nav-pills">
+          <li class="nav-item" style="border-left-width: 2px; border-left-style: solid; border-left-color: white">
             <a class="nav-link bg-warning" aria-current="page" href="#">Beranda</a>
           </li>
           <li class="nav-item dropdown">
@@ -142,92 +142,10 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Kontak</a>
           </li>
-          <li></li>
-            <form class="d-flex px-4">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-              <button class="btn outline-dark bg-warning" type="submit" id="search">Search</button>
-            </form>
-          </li>
         </ul>
       </div>
     </nav>
-
-    <!--
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container">
-        <ul class="nav nav-tabs justify-content-center">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Beranda</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Profil</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="index2.html">Sejarah Singkat</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="index3.html">Sejarah Pengembangan</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="index4.html">Visi dan Misi</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Profil Kelompok Empat</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Program Sekolah</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Program Kerja</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Hubungan Industri</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Teaching Factory dan Program Inovasi</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Program Pengembangan Sekolah</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Program Keahlian</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">TEKNIK ELEKTRONIKA INDUSTRI</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">TEKNIK OTOMASI INDUSTRI</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">SISTEM INFORMASI JARINGAN DAN APLIKASI</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">REKAYASA PERANGKAT LUNAK</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Sarana Prasarana</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Sarana Infrastruktur</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Sarana Pembelajaran</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Kegiatan Sekolah</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Ekstrakulikuler</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Laporan Kegiatan Sekolah</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Galeri</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Foto</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Video</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index21.html" tabindex="-1" aria-disabled="true">Kontak</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    -->
-    <!--Akhir Navbar-->
-
+    
     <!--Slide-->
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -240,21 +158,21 @@
           <img src="image/depan1.jpg" class="d-block w-100" alt="depan1" />
           <div class="carousel-caption d-none d-md-block">
             <h5>SMK Negeri 1 Nilasari</h5>
-            <p>Some representative placeholder content for the first slide.</p>
+            <p>Halaman Depan Sekolah</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="image/depan2.jpg" class="d-block w-100" alt="depan2" />
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+            <h5>Negeri 1 Nilasari</h5>
+            <p>Lingkungan arena sekolah ramah dan rapi.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="image/depan2.jpg" class="d-block w-100" alt="depan3" />
+          <img src="image/depan3.jpg" class="d-block w-100" alt="depan3" />
           <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
+            <h5>SMK Negeri 1 Nilasari</h5>
+            <p>Fasilitas gedung yang memadai.</p>
           </div>
         </div>
       </div>
@@ -268,6 +186,147 @@
       </button>
     </div>
     <!--Akhir Slide-->
+
+    <!--Konten-->    
+    <section style="padding-top:40px">
+      <div class="container">
+        <div class="row" style="padding-bottom:20px;color:#49688e">
+          <div class="col-md-4"><h4>Prakata Kepala Sekolah</h4></div>
+          <div class="col-md-4"><h4>Program Sekolah</h4></div>
+          <div class="col-md-4"><h4>Program Keahlian</h4></div>
+        </div>
+        <div class="row">
+          <div class="col-md">
+            <p>
+              Bismillahirohmannirrohim Assalamualaikum Warahmatullah Wabarakatuh Kami mengucapkan selamat datang di Website kami Sekolah Menengah Kejuruan Negeri (SMKN) 1 Cimahi yang saya tujukan untuk seluruh unsur pimpinan, guru, karyawan
+              dan siswa masyarakat guna dapat mengakses seluruh informasi tentang segala profil, aktifitas/kegiatan serta fasilitas sekolah kami. Kami...
+            </p>
+          </div>
+          <div class="col-md">
+            <p>
+              Adanya berbagai kegiatan pelatihan dari luar yang sering dilakukan di sekolah ini memudahkan sekolah berhubungan dengan dunia usaha dan dunia industri juga dalam mengadopsi kemajuan teknologi yang saat ini berkembang dengan
+              pesat.
+            </p>
+          </div>
+          <div class="col-md">
+            Program Keahlian yang ada di SMK Negeri 1 Cimahi ada 9, ini hampir semuanya merupakan satu-satunya program keahlian yang ada di Indonesia, kecuali untuk program ICT ada untuk yang 3 tahun tapi untuk yang 4 tahun di sekolah ini
+            merupakan...
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Akhir Konten-->
+
+    <!--Berita-->
+    <section style="padding-top:40px">
+      <div class="container">
+        <div class="row" style="padding-bottom:20px;color:#49688e">
+          <div class="col-md-8"><h4>Berita Terbaru</h4></div>
+          <div class="col-md-4"><h4>Info Kegiatan</h4></div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="row">
+              <div class="col-md">
+                <div class="card" style="width: 18rem">
+                  <img src="image/1.jpg" class="card-img-top" alt="..." />
+                  <div class="card-body">
+                    <h5 class="card-title">PPDB SMKN 1 Nilasari Tahun Ajaran 2021-2022</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                  <div class="card-body">
+                    <a href="#" class="card-link">Baca Selengkapnya >></a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md">
+                <div class="card" style="width: 18rem">
+                  <img src="image/3.jpg" class="card-img-top" alt="..." />
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                  <div class="card-body">
+                    <a href="#" class="card-link">Baca Selengkapnya >></a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md">
+                <div class="card" style="width: 18rem">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                  <div class="card-body">
+                    <a href="#" class="card-link">Baca Selengkapnya >></a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md">
+                <div class="card" style="width: 18rem">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                  <div class="card-body">
+                    <a href="#" class="card-link">Baca Selengkapnya >></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <!--Sidebar-->
+            <div class="row">
+              <div class="col-md">
+                <div class="card" style="width: 620px">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="card-link">Baca Selengkapnya >></a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md">
+                <div class="card mb-3" style="width: 620px">
+                  <div class="row g-1">
+                    <div class="col-md-4">
+                      <img src="image/2.jpg" alt="..." />
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md">
+                <div class="card mb-3" style="max-width: 620px">
+                  <div class="row g-0" style="width: auto">
+                    <div class="col-md-4">
+                      <img src="image/4.jpg" alt="..." />
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--Akhir Sidebar-->
+        </div>
+      </div>
+    </section>
+    <!--Akhir Berita-->
 
     <!--Top footer-->
     <section id="top-footer">
