update index.html dan style.css
update konten dan rename navbar menu dropdown. Serta menambah property dan valuenya

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <img src="image/logo.png" class="rounded mx-auto" alt="logo" />
           </div>
           <div class="col-sm-7">
-            <h1>SMK Negeri 1 Nilasari</h1>
+            <h1>SMK NEGERI 1 NILASARI</h1>
             <p>SMK UNGGULAN YANG MENGHASILKAN SDM BERMUTU DAN BERDAYA SAING TINGGI</p>
           </div>
           <div class="col-sm-4">
@@ -86,49 +86,39 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Profil</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Sejarah Singkat</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Visi dan Misi</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Separated link</a></li>
+              <li><a class="dropdown-item" href="#">Profil Kelompok</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Program Sekolah</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Program Kerja</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Teaching Factory dan Program Inovasi</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Separated link</a></li>
+              <li><a class="dropdown-item" href="#">Program Pengembangan Sekolah</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Program Keahlian</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Teknik Eletronika Industri</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Teknik Otomasi Industri</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Separated link</a></li>
+              <li><a class="dropdown-item" href="#">Rekayasa Perangkat Lunak</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Sarana Prasarana</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Sarana Infrastruktur</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Separated link</a></li>
+              <li><a class="dropdown-item" href="#">Sarana Pembelajaran</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -145,7 +135,7 @@
         </ul>
       </div>
     </nav>
-    
+
     <!--Slide-->
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -187,10 +177,10 @@
     </div>
     <!--Akhir Slide-->
 
-    <!--Konten-->    
-    <section style="padding-top:40px">
+    <!--Konten-->
+    <section id="kontenpertama">
       <div class="container">
-        <div class="row" style="padding-bottom:20px;color:#49688e">
+        <div class="row" style="padding-bottom: 20px; color: #49688e">
           <div class="col-md-4"><h4>Prakata Kepala Sekolah</h4></div>
           <div class="col-md-4"><h4>Program Sekolah</h4></div>
           <div class="col-md-4"><h4>Program Keahlian</h4></div>
@@ -198,8 +188,8 @@
         <div class="row">
           <div class="col-md">
             <p>
-              Bismillahirohmannirrohim Assalamualaikum Warahmatullah Wabarakatuh Kami mengucapkan selamat datang di Website kami Sekolah Menengah Kejuruan Negeri (SMKN) 1 Cimahi yang saya tujukan untuk seluruh unsur pimpinan, guru, karyawan
-              dan siswa masyarakat guna dapat mengakses seluruh informasi tentang segala profil, aktifitas/kegiatan serta fasilitas sekolah kami. Kami...
+              Bismillahirohmannirrohim Assalamualaikum Warahmatullah Wabarakatuh Kami mengucapkan selamat datang di Website kami Sekolah Menengah Kejuruan Negeri (SMKN) 1 Nilasari yang saya tujukan untuk seluruh unsur pimpinan, guru,
+              karyawan dan siswa masyarakat guna dapat mengakses seluruh informasi tentang segala profil, aktifitas/kegiatan serta fasilitas sekolah kami. Kami...
             </p>
           </div>
           <div class="col-md">
@@ -209,7 +199,7 @@
             </p>
           </div>
           <div class="col-md">
-            Program Keahlian yang ada di SMK Negeri 1 Cimahi ada 9, ini hampir semuanya merupakan satu-satunya program keahlian yang ada di Indonesia, kecuali untuk program ICT ada untuk yang 3 tahun tapi untuk yang 4 tahun di sekolah ini
+            Program Keahlian yang ada di SMK Negeri 1 Nilasari ada 9, ini hampir semuanya merupakan satu-satunya program keahlian yang ada di Indonesia, kecuali untuk program ICT ada untuk yang 3 tahun tapi untuk yang 4 tahun di sekolah ini
             merupakan...
           </div>
         </div>
@@ -218,21 +208,23 @@
     <!--Akhir Konten-->
 
     <!--Berita-->
-    <section style="padding-top:40px">
+    <section style="padding-top: 40px">
       <div class="container">
-        <div class="row" style="padding-bottom:20px;color:#49688e">
+        <div class="row" style="padding-bottom: 20px; color: #49688e">
           <div class="col-md-8"><h4>Berita Terbaru</h4></div>
           <div class="col-md-4"><h4>Info Kegiatan</h4></div>
         </div>
         <div class="row">
+          <!--dibagi menjadi 2 kolom-->
           <div class="col-md-6">
+            <!--kolom pertama konten Berita Baru-->
             <div class="row">
               <div class="col-md">
-                <div class="card" style="width: 18rem">
+                <div class="card" style="width: 18rem; margin-bottom: 30px">
                   <img src="image/1.jpg" class="card-img-top" alt="..." />
                   <div class="card-body">
                     <h5 class="card-title">PPDB SMKN 1 Nilasari Tahun Ajaran 2021-2022</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">Buat kalian calon peserta didik baru SMKN 1 Nilasari, catat baik-baik jadwal Penerimaan Peserta Didik...</p>
                   </div>
                   <div class="card-body">
                     <a href="#" class="card-link">Baca Selengkapnya >></a>
@@ -243,8 +235,8 @@
                 <div class="card" style="width: 18rem">
                   <img src="image/3.jpg" class="card-img-top" alt="..." />
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">Profile Pelajar Pancasila</h5>
+                    <p class="card-text">Tangerang, 18 Januari 2021 SMKN 1 Nilasari telah melaksanakan sosialisasi Profil Pelajar Pancasila pada Apel...</p>
                   </div>
                   <div class="card-body">
                     <a href="#" class="card-link">Baca Selengkapnya >></a>
@@ -254,8 +246,8 @@
               <div class="col-md">
                 <div class="card" style="width: 18rem">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">Implementasi/Penerapan Budaya Kerja Industri di SMKN 1 Nilasari</h5>
+                    <p class="card-text">SMKN 1 Nilasari, 5 Januari 2020 Sebagai bentuk implementasi dari Program Penerapan Budaya Kerja Industri...</p>
                   </div>
                   <div class="card-body">
                     <a href="#" class="card-link">Baca Selengkapnya >></a>
@@ -265,8 +257,8 @@
               <div class="col-md">
                 <div class="card" style="width: 18rem">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">Form Kesiapan AKB Warga</h5>
+                    <p class="card-text"></p>
                   </div>
                   <div class="card-body">
                     <a href="#" class="card-link">Baca Selengkapnya >></a>
@@ -276,14 +268,14 @@
             </div>
           </div>
           <div class="col-md-6">
+            <!--kolom ke dua konten info kegiatan / sidebar-->
             <!--Sidebar-->
             <div class="row">
               <div class="col-md">
                 <div class="card" style="width: 620px">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title">Implementasi/Penerapan Budaya Kerja Industri di SMKN 1 Nilasari</h5>
+                    <p class="card-text">SMKN 1 Nilasari, 5 Januari 2020 Sebagai bentuk implementasi dari...</p>
                     <a href="#" class="card-link">Baca Selengkapnya >></a>
                   </div>
                 </div>
@@ -296,9 +288,8 @@
                     </div>
                     <div class="col-md-8">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <h5 class="card-title">Workshop Penerapan Budaya Kerja Industri di SMKN 1 Nilasari</h5>
+                        <p class="card-text">infosdmgtk-SMKN 1 Nilasari telah melaksanakan Workshop Budaya Kerja Industri di...</p>
                       </div>
                     </div>
                   </div>
@@ -312,9 +303,8 @@
                     </div>
                     <div class="col-md-8">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <h5 class="card-title">Workshop Produk Kreatif Kewirausahaan menuju Sekolah Pencetak Wirausaha Hari Ke-2</h5>
+                        <p class="card-text">SMKN 1 Nilasari melalui program fasilitasi pameran hasil karya peserta...</p>
                       </div>
                     </div>
                   </div>
@@ -345,7 +335,7 @@
               <div class="col-md"><img src="ikon/twitter.png" alt="twitter" /></div>
               <div class="col-md"><img src="ikon/youtube.png" alt="youtube" /></div>
             </div>
-            <div class="row">
+            <div class="row" style="padding: 20px">
               <div class="col-md">Ayo Follow dan Ikuti informasi seputar kegiatan di SMK Negeri 1 Nilasari di social media kami.</div>
             </div>
           </div>
@@ -382,12 +372,12 @@
           <li>I</li>
           <li class="li-footer">Kontak Kami</li>
         </ul>
-        <p id="footer" style="text-align: center; color: white">All Rights Reserved © TIM ICT 2021. SMKN 1 Nilasari</p>
+        <p id="footer" style="text-align: center; color: white">Abdul Wachid - Nila Nurmala - Yuli Saputra - Ibnu Abdul Azis</p>
         <ul class="ul-footer">
           <li class="li-footer">Proudly powered by Bootstrap</li>
           <li class="li-footer">I</li>
-          <li class="li-footer">Created with Love by</li>
-          <li class="li-footer">Kelompok Satu</li>
+          <li class="li-footer">Created with Love by Kelompok Satu</li>
+          <li class="li-footer"></li>
         </ul>
       </div>
     </footer>
